--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "express-typescript",
   "version": "1.0.0",
   "description": "Express typescript.",
-  "main": "src/index.js",
+  "main": "dist/app.ts",
   "dependencies": {
     "express": "^4.17.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.31",
+    "typescript": "^4.1.5"
+  },
   "scripts": {
-    "start": "node .",
+    "start": "tsc && node ./dist/app.js",
+    "debug": "export DEBUG=* && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
