--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "Express typescript.",
   "main": "dist/app.ts",
   "dependencies": {
-    "express": "^4.17.1"
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.9.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   },
   "scripts": {
-    "start": "tsc && node ./dist/app.js",
-    "debug": "export DEBUG=* && npm run start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon",
+    "start": "ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
