--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
                 "node_modules/*"
             ]
         },
+        "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
     },
     "include": [
