--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "npm:mysql2@^2.2.5",
+    "express-validator": "^6.10.0",
+    "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
-    "typeorm": "^0.2.31"
+    "sequelize": "^6.5.0",
+    "sequelize-typescript": "^2.1.0",
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
