--- a/.env.example
+++ b/.env.example
@@ -10,15 +10,13 @@ LOG_LEVEL=debug
 LOG_OUTPUT=dev
 
 # MySQL DB
-TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=localhost
-TYPEORM_PORT=3306
-TYPEORM_USERNAME=root
-TYPEORM_PASSWORD=root
-TYPEORM_DATABASE=my_database
-TYPEORM_SYNCHRONIZE=false
-TYPEORM_LOGGING=error
-TYPEORM_LOGGER=advanced-console
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3100
+DB_DATABASE=express-typescript
+DB_USERNAME=root
+DB_PASSWORD=
+DB_ENTITIES=src/api/models
 
 # Path
 TYPEORM_MIGRATIONS=src/database/migrations/**/*.ts
