--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,10 @@
 # App
+NODE_ENV=development
 APP_NAME=express-typescript
 APP_SCHEMA=http
 APP_HOST=localhost
 APP_PORT=3000
 APP_ROUTE_PREFIX=/api
-
-# Logging
-LOG_LEVEL=debug
-LOG_OUTPUT=dev
 
 # MySQL DB
 DB_CONNECTION=mysql
@@ -19,11 +16,7 @@ DB_PASSWORD=
 DB_ENTITIES=src/api/models
 
 # Path
-TYPEORM_MIGRATIONS=src/database/migrations/**/*.ts
-TYPEORM_MIGRATIONS_DIR=src/database/migrations
-TYPEORM_ENTITIES=src/api/models/**/*.ts
-TYPEORM_ENTITIES_DIR=src/api/models
-CONTROLLERS=src/api/controllers/**/*Controller.ts
+CONTROLLERS=/api/controllers/**/*Controller{.ts,.js}
 MIDDLEWARES=src/api/middlewares/**/*Middleware.ts
 INTERCEPTORS=src/api/interceptors/**/*Interceptor.ts
 SUBSCRIBERS=src/api/subscribers/**/*Subscriber.ts
