--- a/.env.example
+++ b/.env.example
@@ -6,18 +6,18 @@ APP_HOST=localhost
 APP_PORT=3000
 APP_ROUTE_PREFIX=/api
 
-# MySQL DB
+# DB
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3100
 DB_DATABASE=express-typescript
 DB_USERNAME=root
 DB_PASSWORD=
-DB_ENTITIES=src/api/models
 
 # Path
+ENTITIES=/api/models/**/*{.ts,.js}
 CONTROLLERS=/api/controllers/**/*Controller{.ts,.js}
-MIDDLEWARES=src/api/middlewares/**/*Middleware.ts
-INTERCEPTORS=src/api/interceptors/**/*Interceptor.ts
-SUBSCRIBERS=src/api/subscribers/**/*Subscriber.ts
-RESOLVERS=src/api/resolvers/**/*Resolver.ts
+MIDDLEWARES=/api/middlewares/**/*Middleware.ts
+INTERCEPTORS=/api/interceptors/**/*Interceptor.ts
+SUBSCRIBERS=/api/subscribers/**/*Subscriber.ts
+RESOLVERS=/api/resolvers/**/*Resolver.ts
