Add Event Dispatcher 🚀

--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,5 @@ ENTITIES=/api/models/**/*{.ts,.js}
 CONTROLLERS=/api/controllers/**/*Controller{.ts,.js}
 MIDDLEWARES=/api/middlewares/**/*Middleware.ts
 INTERCEPTORS=/api/interceptors/**/*Interceptor.ts
-SUBSCRIBERS=/api/subscribers/**/*Subscriber.ts
+SUBSCRIBERS=/api/subscribers/**/*Subscriber{.ts,.js}
 RESOLVERS=/api/resolvers/**/*Resolver.ts
