--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Express typescript.",
   "main": "dist/app.ts",
   "dependencies": {
+    "@types/glob": "^7.1.3",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "event-dispatch": "^0.4.1",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
+    "glob": "^7.1.6",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
