Add Auth System 🚀

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_SCHEMA=http
 APP_HOST=localhost
 APP_PORT=3000
 APP_ROUTE_PREFIX=/api
+JWT_SECRET=RANDOM_STRING_5729151279
 
 # DB
 DB_CONNECTION=mysql
