--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/app.ts",
   "dependencies": {
     "@types/glob": "^7.1.3",
+    "@types/jsonwebtoken": "^8.5.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -14,6 +15,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "glob": "^7.1.6",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
