--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-typescript",
   "version": "1.0.0",
   "description": "Express typescript.",
-  "main": "dist/app.ts",
+  "main": "dist/index.ts",
   "dependencies": {
     "@types/glob": "^7.1.3",
     "@types/jsonwebtoken": "^8.5.0",
@@ -39,13 +39,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gentritabazi01/express-typescript.git"
+    "url": "https://github.com/kutia-software-company/express-typescript-starter"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "expressjs",
+    "express-typescript"
+  ],
+  "author": "Gentrit Abazi",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/gentritabazi01/express-typescript/issues"
+    "url": "https://github.com/kutia-software-company/express-typescript-starter/issues"
   },
-  "homepage": "https://github.com/gentritabazi01/express-typescript#readme"
+  "homepage": "https://github.com/kutia-software-company/express-typescript-starter#readme"
 }
