--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/glob": "^7.1.3",
     "@types/jsonwebtoken": "^8.5.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -25,6 +26,7 @@
     "typedi": "^0.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.11",
     "@types/multer": "^1.4.5",
