--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,17 @@ APP_ROUTE_PREFIX=/api
 JWT_SECRET=RANDOM_STRING_5729151279
 
 # DB
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3100
-DB_DATABASE=express-typescript
-DB_USERNAME=root
-DB_PASSWORD=
+TYPEORM_CONNECTION=mysql
+TYPEORM_HOST=127.0.0.1
+TYPEORM_PORT=3306
+TYPEORM_USERNAME=root
+TYPEORM_PASSWORD=
+TYPEORM_DATABASE=express-typescript
+TYPEORM_AUTO_SCHEMA_SYNC=false
+TYPEORM_ENTITIES=/api/models/**/*.ts
+TYPEORM_MIGRATIONS=src/database/migrations/*.ts
+TYPEORM_ENTITIES_DIR=/api/models
+TYPEORM_MIGRATIONS_DIR=src/database/migrations
 
 # Path
 ENTITIES=/api/models/**/*{.ts,.js}
