Improve env vars.

--- a/.env.example
+++ b/.env.example
@@ -13,13 +13,15 @@ TYPEORM_USERNAME=root
 TYPEORM_PASSWORD=
 TYPEORM_DATABASE=express-typescript
 TYPEORM_AUTO_SCHEMA_SYNC=false
-TYPEORM_ENTITIES=/api/models/**/*.ts
+TYPEORM_ALLOW_LOGGING=true
+TYPEORM_ENTITIES=/api/models/**/*{.ts,.js}
 TYPEORM_MIGRATIONS=src/database/migrations/*.ts
-TYPEORM_ENTITIES_DIR=/api/models
-TYPEORM_MIGRATIONS_DIR=src/database/migrations
 
 # Path
-ENTITIES=/api/models/**/*{.ts,.js}
-CONTROLLERS=/api/controllers/**/*Controller{.ts,.js}
-MIDDLEWARES=/api/middlewares/**/*Middleware.ts
-SUBSCRIBERS=/api/subscribers/**/*Subscriber{.ts,.js}
+TYPEORM_ENTITIES_DIR=/api/models
+TYPEORM_MIGRATIONS_DIR=src/database/migrations
+TYPEORM_SEEDING_FACTORIES=src/database/factories/**/*.ts
+TYPEORM_SEEDING_SEEDS=src/database/seeds/**/*{.ts,.js}
+CONTROLLERS_DIR=/api/controllers/**/*Controller{.ts,.js}
+MIDDLEWARES_DIR=/api/middlewares/**/*Middleware{.ts,.js}
+SUBSCRIBERS_DIR=/api/subscribers/**/*Subscriber{.ts,.js}
