Make TypeORM more dynamic.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 # App
-NODE_ENV=development
 APP_NAME=express-typescript-starter
 APP_PORT=3000
 APP_ROUTE_PREFIX=/api
@@ -13,14 +12,14 @@ TYPEORM_USERNAME=root
 TYPEORM_PASSWORD=
 TYPEORM_DATABASE=express-typescript
 TYPEORM_AUTO_SCHEMA_SYNC=false
-TYPEORM_ALLOW_LOGGING=true
-TYPEORM_ENTITIES=/api/models/**/*{.ts,.js}
-TYPEORM_MIGRATIONS=src/database/migrations/*.ts
+TYPEORM_LOGGING=TRUE
+TYPEORM_ENTITIES=src/api/models/**/*.ts,src/api/models/**/*.js
+TYPEORM_MIGRATIONS=src/database/migrations/*{.ts,.js}
 
 # Path
-TYPEORM_ENTITIES_DIR=/api/models
+TYPEORM_ENTITIES_DIR=src/api/models
 TYPEORM_MIGRATIONS_DIR=src/database/migrations
-TYPEORM_SEEDING_FACTORIES=src/database/factories/**/*.ts
+TYPEORM_SEEDING_FACTORIES=src/database/factories/**/*{.ts,.js}
 TYPEORM_SEEDING_SEEDS=src/database/seeds/**/*{.ts,.js}
 CONTROLLERS_DIR=/api/controllers/**/*Controller{.ts,.js}
 MIDDLEWARES_DIR=/api/middlewares/**/*Middleware{.ts,.js}
