--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "routing-controllers": "^0.9.0",
     "typedi": "^0.10.0",
     "typeorm": "^0.2.31",
+    "typeorm-seeding": "^1.6.1",
     "typeorm-typedi-extensions": "^0.4.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.1.7",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.31",
     "nodemon": "^2.0.7",
@@ -36,11 +38,13 @@
     "typescript": "^4.2.2"
   },
   "scripts": {
-    "dev": "nodemon",
+    "dev": "NODE_ENV=development nodemon",
     "start": "ts-node src/index.ts",
     "build": "tsc --project ./",
     "typeorm": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm",
-    "typeorm:migration:create": "npm run typeorm -- migration:create -n"
+    "typeorm:migration:create": "npm run typeorm -- migration:create -n",
+    "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
+    "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
   },
   "repository": {
     "type": "git",
