--- a/.env.example
+++ b/.env.example
@@ -22,5 +22,5 @@ TYPEORM_MIGRATIONS_DIR=src/database/migrations
 TYPEORM_SEEDING_FACTORIES=src/database/factories/**/*{.ts,.js}
 TYPEORM_SEEDING_SEEDS=src/database/seeds/**/*{.ts,.js}
 CONTROLLERS_DIR=/api/controllers/**/*Controller{.ts,.js}
-MIDDLEWARES_DIR=/api/middlewares/**/*Middleware{.ts,.js}
+MIDDLEWARES_DIR=/api/middlewares/**/*{.ts,.js}
 SUBSCRIBERS_DIR=/api/subscribers/**/*Subscriber{.ts,.js}
