--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ JWT_SECRET=RANDOM_STRING_5729151279
 TYPEORM_CONNECTION=mysql
 TYPEORM_HOST=127.0.0.1
 TYPEORM_PORT=3306
-TYPEORM_USERNAME=root
-TYPEORM_PASSWORD=
+TYPEORM_USERNAME=kutia
+TYPEORM_PASSWORD=6028201644
 TYPEORM_DATABASE=express-typescript
 TYPEORM_AUTO_SCHEMA_SYNC=false
 TYPEORM_LOGGING=TRUE
