--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
         image: nginx:alpine
         container_name: proxy
         ports:
-            - "8033:8033"
+            - '${PROXY_PORT:-8033}:8033'
         volumes:
             - ./docker/nginx.conf:/etc/nginx/nginx.conf
-        restart: "unless-stopped"
+        restart: 'unless-stopped'
         networks:
             - backend
 
@@ -18,11 +18,11 @@ services:
             dockerfile: docker/Dockerfile.local
         container_name: web-server
         ports:
-            - "3000:3000"
+            - '${APP_PORT:-3000}:3000'
         volumes:
             - ./:/app
             - /app/node_modules
-        restart: "unless-stopped"
+        restart: 'unless-stopped'
         networks:
             - backend
         links:
