--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ TYPEORM_PASSWORD=6028201644
 TYPEORM_DATABASE=express-typescript
 TYPEORM_AUTO_SCHEMA_SYNC=false
 TYPEORM_LOGGING=TRUE
-TYPEORM_ENTITIES=src/api/models/**/*.ts,src/api/models/**/*.js,dist/api/models/**/{.ts,.js}
-TYPEORM_MIGRATIONS=src/database/migrations/*.ts,src/database/migrations/*.js,dist/database/migrations/**/{.ts,.js}
+TYPEORM_ENTITIES=src/api/models/**/*.ts,src/api/models/**/*.js
+TYPEORM_MIGRATIONS=src/database/migrations/*.ts,src/database/migrations/*.js
 
 # Path
 TYPEORM_ENTITIES_DIR=src/api/models
