--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
+    "cron-decorators": "^0.1.5",
+    "cron-time-generator": "^1.2.0",
     "dotenv": "^8.2.0",
     "event-dispatch": "^0.4.1",
     "express": "^4.17.1",
@@ -32,7 +34,7 @@
     "@types/express": "^4.17.11",
     "@types/faker": "^5.1.7",
     "@types/multer": "^1.4.5",
-    "@types/node": "^14.14.33",
+    "@types/node": "^14.14.34",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
