Allow to run or not cron jobs.

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ TYPEORM_LOGGING=TRUE
 TYPEORM_ENTITIES=src/api/models/**/*.ts,src/api/models/**/*.js
 TYPEORM_MIGRATIONS=src/database/migrations/*.ts,src/database/migrations/*.js
 
+# Cron Jobs
+ENABLE_CRON_JOBS=false
+
 # Path
 TYPEORM_ENTITIES_DIR=src/api/models
 TYPEORM_MIGRATIONS_DIR=src/database/migrations
