--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Express typescript.",
   "dependencies": {
     "@types/glob": "^7.1.3",
-    "@types/jsonwebtoken": "^8.5.0",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/socket.io": "^2.1.13",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.4.0",
@@ -23,6 +24,7 @@
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
     "socket-controllers": "0.0.5",
+    "socket.io": "^3.0.0",
     "typedi": "^0.10.0",
     "typeorm": "^0.2.31",
     "typeorm-seeding": "^1.6.1",
@@ -34,7 +36,7 @@
     "@types/express": "^4.17.11",
     "@types/faker": "^5.1.7",
     "@types/multer": "^1.4.5",
-    "@types/node": "^14.14.34",
+    "@types/node": "^14.14.35",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
