--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "Express typescript.",
   "dependencies": {
+    "@types/cron": "^1.7.2",
     "@types/glob": "^7.1.3",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/socket.io": "^2.1.13",
+    "@types/swagger-ui-express": "^4.1.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "class-validator-jsonschema": "^3.0.0",
     "cors": "^2.8.5",
     "cron-decorators": "^0.1.5",
     "cron-time-generator": "^1.2.0",
@@ -23,8 +26,10 @@
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
+    "routing-controllers-openapi": "^3.0.0",
     "socket-controllers": "0.0.5",
     "socket.io": "^3.0.0",
+    "swagger-ui-express": "^4.1.6",
     "typedi": "^0.10.0",
     "typeorm": "^0.2.31",
     "typeorm-seeding": "^1.6.1",
