--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ TYPEORM_MIGRATIONS=src/database/migrations/*.ts,src/database/migrations/*.js
 # Cron Jobs
 ENABLE_CRON_JOBS=false
 
+# Graph QL
+ENABLE_GRAPHQL=true
+
 # Path
 TYPEORM_ENTITIES_DIR=src/api/models
 TYPEORM_MIGRATIONS_DIR=src/database/migrations
@@ -28,3 +31,4 @@ CONTROLLERS_DIR=/api/controllers/**/*Controller{.ts,.js}
 CRON_JOBS_DIR=/api/cron-jobs/**/*Job{.ts,.js}
 MIDDLEWARES_DIR=/api/middlewares/**/*{.ts,.js}
 SUBSCRIBERS_DIR=/api/subscribers/**/*Subscriber{.ts,.js}
+RESOLVERS_DIR=/api/resolvers/**/*Resolver{.ts,.js}
