--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^8.2.0",
     "event-dispatch": "^0.4.1",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-validator": "^6.10.0",
     "glob": "^7.1.6",
+    "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
@@ -31,6 +33,7 @@
     "socket-controllers": "0.0.5",
     "socket.io": "^3.0.0",
     "swagger-ui-express": "^4.1.6",
+    "type-graphql": "^1.1.1",
     "typedi": "^0.10.0",
     "typeorm": "^0.2.32",
     "typeorm-seeding": "^1.6.1",
