--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,14 @@ TYPEORM_LOGGING=TRUE
 TYPEORM_ENTITIES=src/api/models/**/*.ts,src/api/models/**/*.js
 TYPEORM_MIGRATIONS=src/database/migrations/*.ts,src/database/migrations/*.js
 
+# MAIL
+MAIL_PROVIDER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_AUTH_USER=example@gmail.com
+MAIL_AUTH_PASSWORD=password
+MAIL_FROM_NAME='My App'
+
 # Cron Jobs
 ENABLE_CRON_JOBS=false
 
