--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/yargs": "^16.0.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "bullmq": "^1.15.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "class-validator-jsonschema": "^3.0.1",
