--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,12 @@
         "paths": {
             "*": [
                 "node_modules/*"
+            ],
+            "@base/*": [
+                "src/*"
+            ],
+            "@api/*": [
+                "src/api/*"
             ]
         },
         "emitDecoratorMetadata": true,
