--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "graphql": "^15.5.0",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0",
@@ -44,16 +45,17 @@
     "yargs": "^16.2.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcrypt": "^3.0.1",
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.11",
-    "@types/faker": "^5.5.0",
+    "@types/faker": "^5.5.1",
+    "@types/module-alias": "^2.0.0",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.37",
     "@types/nodemailer": "^6.4.1",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "dev": "NODE_ENV=development ./node_modules/.bin/nodemon --exec './node_modules/.bin/ts-node' src/index.ts",
