--- a/.env.example
+++ b/.env.example
@@ -39,4 +39,5 @@ CONTROLLERS_DIR=/api/controllers/**/*Controller{.ts,.js}
 CRON_JOBS_DIR=/api/cron-jobs/**/*Job{.ts,.js}
 MIDDLEWARES_DIR=/api/middlewares/**/*{.ts,.js}
 SUBSCRIBERS_DIR=/api/subscribers/**/*Subscriber{.ts,.js}
+EVENTS_DIR=/api/events/**/*{.ts,.js}
 RESOLVERS_DIR=/api/resolvers/**/*Resolver{.ts,.js}
