Change commands for migrations.

--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "start": "NODE_ENV=production node ./dist/index.js",
     "build": "tsc --project ./",
     "typeorm": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm",
-    "typeorm:migration:create": "npm run typeorm -- migration:create -n",
+    "make:migration": "npm run typeorm -- migration:create -n",
+    "migrate": "npm run typeorm -- migration:run",
     "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
     "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
   },
