--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
   },
   "scripts": {
     "dev": "NODE_ENV=development ./node_modules/.bin/nodemon --exec './node_modules/.bin/ts-node' src/index.ts",
-    "start": "NODE_ENV=production node ./dist/index.js",
-    "build": "tsc --project ./",
+    "start": "npm run build && NODE_ENV=production node ./dist/index.js",
+    "build": "tsc",
     "typeorm": "ts-node -r ./fix-module-alias.js ./node_modules/.bin/typeorm",
     "make:migration": "npm run typeorm -- migration:create -n",
     "migrate": "npm run typeorm -- migration:run",
