--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,14 @@ services:
         healthcheck:
             test: ["CMD", "redis-cli", "ping"]
 
+    mailhog:
+        image: "mailhog/mailhog:latest"
+        ports:
+            - '${FORWARD_MAILHOG_PORT:-1025}:1025'
+            - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
+        networks:
+            - backend
+
 networks:
     backend:
         driver: bridge
