--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/cron": "^1.7.2",
     "@types/glob": "^7.1.3",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mailgen": "^2.0.3",
     "@types/socket.io": "^2.1.13",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/yargs": "^16.0.1",
@@ -27,6 +28,7 @@
     "graphql": "^15.5.0",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
+    "mailgen": "^2.0.14",
     "module-alias": "^2.2.2",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
