--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ TYPEORM_AUTO_SCHEMA_SYNC=false
 TYPEORM_LOGGING=TRUE
 TYPEORM_ENTITIES=src/api/models/**/*.ts,src/api/models/**/*.js
 TYPEORM_MIGRATIONS=src/database/migrations/*.ts,src/database/migrations/*.js
+TYPEORM_DRIVER_EXTRA='{"bigNumberStrings": false}'
 
 # MAIL
 MAIL_PROVIDER=smtp
