--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
     "@types/node": "^14.14.41",
     "@types/nodemailer": "^6.4.1",
     "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.2.4"
   },
   "scripts": {
@@ -67,7 +70,9 @@
     "make:migration": "npm run typeorm -- migration:create -n",
     "migrate": "npm run typeorm -- migration:run",
     "seed:config": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js config",
-    "db:seed": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed"
+    "db:seed": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "repository": {
     "type": "git",
