--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "routing-controllers-openapi": "^3.0.0",
     "socket-controllers": "0.0.5",
     "socket.io": "^3.0.0",
+    "supertest": "^6.1.3",
     "swagger-ui-express": "^4.1.6",
     "type-graphql": "^1.1.1",
     "typedi": "^0.10.0",
@@ -52,12 +53,16 @@
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.11",
     "@types/faker": "^5.5.3",
+    "@types/jest": "^26.0.23",
     "@types/module-alias": "^2.0.0",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.43",
     "@types/nodemailer": "^6.4.1",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.0.4",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "ts-jest": "^27.0.2",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
@@ -74,7 +79,8 @@
     "db:seed": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
     "db:seed:production": "NODE_ENV=production ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
