--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_NAME=express-typescript-starter
 APP_PORT=3000
 APP_ROUTE_PREFIX=/api
 JWT_SECRET=RANDOM_STRING_5729151279
-APP_URL=http://localhost
+APP_URL=http://localhost:3000
 
 # DB
 TYPEORM_CONNECTION=mysql
