--- a/package.json
+++ b/package.json
@@ -6,33 +6,33 @@
     "@types/cron": "^1.7.2",
     "@types/glob": "^7.1.3",
     "@types/jsonwebtoken": "^8.5.1",
-    "@types/mailgen": "^2.0.3",
+    "@types/mailgen": "^2.0.4",
     "@types/socket.io": "^2.1.13",
     "@types/swagger-ui-express": "^4.1.2",
-    "@types/yargs": "^16.0.1",
+    "@types/yargs": "^16.0.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
-    "bullmq": "^1.21.0",
+    "bullmq": "^1.32.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "class-validator-jsonschema": "^3.0.1",
     "cors": "^2.8.5",
     "cron-decorators": "^0.1.5",
     "cron-time-generator": "^1.2.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "event-dispatch": "^0.4.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "express-validator": "^6.10.1",
-    "glob": "^7.1.6",
+    "express-validator": "^6.11.1",
+    "glob": "^7.1.7",
     "graphql": "^15.5.0",
-    "helmet": "^4.5.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mailgen": "^2.0.14",
     "module-alias": "^2.2.2",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
-    "nodemailer": "^6.5.0",
+    "nodemailer": "^6.6.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
     "routing-controllers-openapi": "^3.0.0",
@@ -42,7 +42,7 @@
     "swagger-ui-express": "^4.1.6",
     "type-graphql": "^1.1.1",
     "typedi": "^0.10.0",
-    "typeorm": "^0.2.32",
+    "typeorm": "^0.2.34",
     "typeorm-seeding": "^1.6.1",
     "typeorm-simple-query-parser": "^1.0.7",
     "typeorm-typedi-extensions": "^0.4.1",
@@ -51,22 +51,20 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.1",
     "@types/body-parser": "^1.19.0",
-    "@types/express": "^4.17.11",
-    "@types/faker": "^5.5.3",
+    "@types/express": "^4.17.12",
+    "@types/faker": "^5.5.6",
     "@types/jest": "^26.0.23",
     "@types/module-alias": "^2.0.0",
     "@types/multer": "^1.4.5",
-    "@types/node": "^14.14.43",
-    "@types/nodemailer": "^6.4.1",
+    "@types/node": "^14.17.3",
+    "@types/nodemailer": "^6.4.2",
     "@types/supertest": "^2.0.11",
     "jest": "^27.0.4",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
-    "ts-jest": "^27.0.2",
+    "prettier": "^2.3.1",
+    "ts-jest": "^27.0.3",
     "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.2"
   },
   "scripts": {
     "dev": "NODE_ENV=development ./node_modules/.bin/nodemon --exec './node_modules/.bin/ts-node' src/index.ts",
@@ -78,8 +76,8 @@
     "seed:config": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js config",
     "db:seed": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
     "db:seed:production": "NODE_ENV=production ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
-    "code:format": "prettier --write \"src/**/*.{ts,tsx,js,html}\"",
-    "code:check": "prettier --check \"src/**/*.{ts,tsx,js,html}\"",
+    "code:format": "prettier --write \"src/**/*.{ts,css,js,html}\"",
+    "code:check": "prettier --check \"src/**/*.{ts,css,js,html}\"",
     "code:format:specific-file": "prettier --write ",
     "test": "jest"
   },
