--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "typescript": "^4.3.2"
   },
   "scripts": {
-    "dev": "NODE_ENV=development ./node_modules/.bin/nodemon --exec './node_modules/.bin/ts-node' src/index.ts",
-    "start": "npm run build && NODE_ENV=production node ./dist/index.js",
+    "dev": "NODE_ENV=development ./node_modules/.bin/nodemon --exec './node_modules/.bin/ts-node' src/main.ts",
+    "start": "npm run build && NODE_ENV=production node ./dist/main.js",
     "build": "tsc",
     "typeorm": "ts-node -r ./fix-module-alias.js ./node_modules/.bin/typeorm",
     "make:migration": "npm run typeorm -- migration:create -n",
