--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.1",
     "@types/body-parser": "^1.19.0",
+    "@types/cron": "^1.7.2",
     "@types/express": "^4.17.12",
     "@types/faker": "^5.5.6",
     "@types/jest": "^26.0.23",
